# sniper-A-stock

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  _missing_syms.json  create_tasks.ps1  l4_report_clean.txt  main.py  pyproject.toml  requirements.txt  run_daily.bat  run_daily_pipeline.bat  setup_schedule.bat  setup_schedule.ps1  setup_startup.ps1  setup_task.bat  setup_weekly_task.ps1  test_recovery.db  } {m.get(annual_return,0)+8.2%}')print(f'Sharpe   {0.1510}  -  {m.get(sharpe,0)8.2f}')print(f'回撤     {6.22%10}  -  {m.get(max_drawdown,0)8.2%}')
.l2_cache/: top_stocks.json
backtest/: data_loader.py  diagnostic_engine.py  l1_diagnosis.py  l4_fractal_backtest.py  precompute_v2.py  run.py  runner.py  trade_by_trade.py  tune.py  yearly_attr.py
config/: etf_registry.json  paths.py  settings.py
core/: logger.py
data/: convert.py  downloader.py  fetch.py  freshness.py  fund_flow.py  index_etf.py  industry.py  interfaces.py  market_broad.py  normalizer.py  pipeline.py  pre_filter.py  price_data.py  quality.py  store.py  stream_engine.py
docs/: case-study-300668.md  daily-report-template.md  factor-design.md  三层统一评分架构设计.md  代码实际需求-vs-设计V2对照.md  估值数据源-设计文档.md  参数优化-分箱归因需求文档.md  参数智能优化-打字机归因方案.md  因子体系评估报告.md  因子权重优化方案.md  改进方案_回测分析报告.md  改进方案_评估结论.md  狙击手架构V3-性能优化与参数自进化.md  狙击手架构V3-设计文档.md  系统架构与日报归档.md  项目总结.md  项目规则-设计与代码同步.md
engine/: portfolio.py  scheduler.py  state_machine.py  watcher.py
factor_eval_4318/: quantile_summary.csv
factors/: __init__.py  alpha.py  macd.py  multi_factor.py  pattern.py  precompute.py  volume.py  (+1 more)
(+327 files in other folders)
