[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "quant-system"
version = "0.1.0"
description = "Python 量化交易策略回测与实盘系统"
requires-python = ">=3.13"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=1.1.0",
    "scipy>=1.7.0",
    "akshare>=1.18.0",
    "tushare>=1.4.0",
    "pyyaml",
    "matplotlib",
    "fpdf2>=2.7.0",
    "mootdx>=0.11.7",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = [
    "E501",  # 行长度由 formatter 处理
    "B904",  # raise 不带 from 时警告，本项目沿用
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
